--- a/public/paper.html
+++ b/public/paper.html
@@ -17,6 +17,6 @@
       
     <h2>We tied!</h2>
 
-    <div><a href="/index">Rules</a></div>
+    <div><a href="/">Rules</a></div>
   </body>
 </html>
